methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:0: error: class PictureMono1 needs to be abstract, since method marquerSol is not defined
class PictureMono1 extends SimpleBuggle {
      ^